# Sketchai

./: .env.example  API.md  ARCHITECTURE.md  CHANGELOG.md  README.md  ROADMAP.md
backend/: Cargo.toml
backend/src/: config.rs  main.rs
backend/src/middleware/: auth.rs  rate_limit.rs
backend/src/routes/: billing.rs  diagrams.rs  health.rs  mod.rs  users.rs
backend/src/services/: billing.rs  diagram.rs  mod.rs  supabase.rs  usage.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Navbar.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Input.tsx  Modal.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  supabase.ts
frontend/src/pages/: AppPage.tsx  AuthPages.tsx  LandingPage.tsx  LegalPages.tsx  SecondaryPages.tsx
frontend/src/store/: diagramStore.ts
supabase/migrations/: 20240301000000_initial_schema.sql
