[package]
name = "sketchai-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# JWT verification
jsonwebtoken = "9"

# Crypto
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Async utilities
futures = "0.3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrent map for IP rate limiting
dashmap = "5"

# Async traits
async-trait = "0.1"

# Error handling
thiserror = "1"

# HTTP types
http = "1"

[dev-dependencies]
tokio-test = "0.4"
